# D3D12Apps

./: CMakeLists.txt  LICENSE  README.md
MeshHLK/: BufferHelper.h  CMakeLists.txt  ImageManager.cpp  ImageManager.h  Main.cpp  QueryHelper.cpp  QueryHelper.h  RendererHelper.cpp  RendererHelper.h  ShaderAndAppCommon.h  TemporaryResourceTransition.cpp  TemporaryResourceTransition.h
MeshHLK/shaders/: ASLargePayload.hlsl.h  ASNoPS.hlsl.h  ASPrimitiveID.hlsl.h  ASRayQuery.hlsl.h  ASSmallPayload.hlsl.h  CS_simple.hlsl.h  DS_simple.hlsl.h  GS_simple.hlsl.h  HS_simple.hlsl.h  MSCullAllPrimitives.hlsl.h  MSLarge.hlsl.h  MSLargeFromAS.hlsl.h  MSLargeViewInstancingFromAS.hlsl.h  MSMedium.hlsl.h  MSMediumFromAS.hlsl.h  MSMediumLine.hlsl.h  MSMediumLineFromAS.hlsl.h  MSNoPS.hlsl.h  MSPrimitiveID.hlsl.h  MSPrimitiveIDFromAS.hlsl.h  MSRayQuery.hlsl.h  MSRayQueryFromAS.hlsl.h  MSSmall.hlsl.h  MSSmallFromAS.hlsl.h  MSSmallViewInstancingFromAS.hlsl.h  MSSysVal.hlsl.h  MSVariableRateShading.hlsl.h  MSViewInstancing.hlsl.h  PS.hlsl.h  PSPrimitiveID.hlsl.h  PSRayQuery.hlsl.h  PSSysVal.hlsl.h  PSVRS.hlsl.h  PSViewInstancing.hlsl.h  PS_simple.hlsl.h  TestShaders.h  TestShaders.hlsl  VS.hlsl.h  VSLine.hlsl.h  VSSysVal.hlsl.h  (+5 more)
MeshRender/: CMakeLists.txt  Main.cpp
MeshRender/shaders/: Mesh.hlsl  Shaders.hlsl
RotatingPyramid/: CMakeLists.txt  Main.cpp
RotatingPyramid/shaders/: Mipgen.hlsl  Shaders.hlsl  compileshaders.bat
SamplerFeedback/: CMakeLists.txt  Main.cpp
SamplerFeedback/shaders/: Shaders.hlsl  compileshaders.bat
